--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,16 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import Experience from '@/components/Experience.astro';
+import Header from '../components/Header.astro';
+import Hero from '../components/Hero.astro';
+import { getLangFromUrl, useTranslations } from '../i18n/utils';
 import Layout from '../layouts/Layout.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
-<Layout>
-	<Welcome />
+<Layout title={t('main.layout.title')} >
+  <Header />
+  <Hero t={t}/>
+  <Experience t={t} />
 </Layout>
