--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,9 +18,9 @@ const text = {
     <div class="flex items-center">
       <div class="bg-background size-86 rounded-full border border-primary" />
     </div>
-    <div class="flex flex-col items-start gap-1">
+    <div class="flex flex-col items-start gap-2">
       <h1 class="text-4xl lg:text-6xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary/80 to-primary to dark:from-primary dark:to-primary/60">{text.title}</h1>
-      <p class="text-2xl lg:text-4xl font-medium bg-clip-text text-transparent bg-gradient-to-r from-foreground/80 to-foreground dark:from-foreground dark:to-foreground/60">{text.subtitle}</p>
+      <p class="text-2xl lg:h-12 lg:text-4xl font-medium bg-clip-text text-transparent bg-gradient-to-r from-foreground/80 to-foreground dark:from-foreground dark:to-foreground/60">{text.subtitle}</p>
       <p class="text-muted-foreground mt-2">{text.description}</p>
     </div>
   </div>
