--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,7 +13,7 @@ const text = {
 }
 
 ---
-<section class="flex flex-col gap-4 items-center max-w-[1200px] mx-auto py-24">
+<section id={t('nav.home')} class="flex flex-col gap-4 items-center max-w-[1200px] mx-auto py-24">
   <div class="p-8 w-fit flex flex-col md:flex-row items-center gap-12">
     <div class="flex items-center">
       <div class="bg-background size-86 rounded-full border border-primary" />
