--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -14,8 +14,8 @@ const experiences = await getCollection(collectionName);
 
 const sortedExperiences: CollectionEntry<typeof collectionName>[] = sortExperiencesByDate(experiences);
 ---
-<Section >
-  <SectionTitle id={t('nav.experience')} title={t('experience.title')} />
+<Section id={t('nav.experience')}>
+  <SectionTitle title={t('experience.title')} />
   <div class="relative">
     <div class="absolute left-[0.45rem] top-4 bottom-4 w-0.5 bg-gradient-to-b from-transparent via-primary to-transparent z-0"></div>
     <div class="space-y-8">
@@ -68,8 +68,8 @@ const sortedExperiences: CollectionEntry<typeof collectionName>[] = sortExperien
               {experience.data.description && experience.data.description.length > 0 && (
                 <ul class="relative space-y-2 text-sm text-foreground/80">
                   {experience.data.description.map((item: string) => (
-                    <div class="flex items-center gap-2">
-                      <span class="size-2 border-2 border-primary rounded-full" />
+                    <div class="flex items-baseline gap-2 leading-6">
+                      <span class="size-2 border-2 border-primary rounded-full flex-shrink-0" />
                       <li>
                         {item}
                       </li>
