--- a/src/components/SectionTitle.astro
+++ b/src/components/SectionTitle.astro
@@ -1,11 +1,10 @@
 ---
 export interface Props {
-  id: string;
   title: string;
 }
 
-const { id, title } = Astro.props;
+const { title } = Astro.props;
 ---
-<h2 id={id} class="text-2xl w-fit font-bold bg-clip-text text-transparent bg-gradient-to-r from-foreground/80 to-foreground dark:from-foreground dark:to-foreground/60" >
+<h2 class="text-2xl w-fit font-bold bg-clip-text text-transparent bg-gradient-to-r from-foreground/80 to-foreground dark:from-foreground dark:to-foreground/60" >
   {title}
 </h2>
