--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -1,3 +1,10 @@
-<section class="max-w-[1200px] mx-auto p-6 space-y-8 mb-12">
+---
+export interface Props {
+  id: string;
+}
+
+const { id } = Astro.props;
+---
+<section id={id} class="max-w-[1200px] w-full mx-auto p-6 space-y-8 mb-12">
   <slot />  
 </section>
