--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -66,7 +66,7 @@ const pages = [
   },
 ]
 ---
-<div class="fixed backdrop-blur-2xl w-[100vw] border-b p-4 px-8 z-10 flex justify-center">
+<div class="fixed bg-background/60 backdrop-blur-3xl w-[100vw] border-b p-4 px-8 z-10 flex justify-center">
   <div class="flex items-center justify-between w-full md:max-w-[1200px]">
     <SideBar 
       pages={pages}
