--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -58,11 +58,11 @@ const pages = [
   },
   {
     name: t('nav.education'),
-    url: "#"
+    url: `#${t('nav.education')}`
   },
   {
     name: t('nav.contact'),
-    url: "#"
+    url: `#${t('nav.contact')}`
   },
 ]
 ---
