Contact form hcaptcha support

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -23,7 +23,9 @@ const translations = {
   submit: t('contact.form.submit'),
   unexpectedError: t('contact.form.unexpectedError'),
   invalidFormat: t('contact.form.invalidFormat'),
-  successMessage: t('contact.form.successMessage')
+  successMessage: t('contact.form.successMessage'),
+  captchaRequired: t('contact.form.captchaRequired'),
+  captchaError: t('contact.form.captchaError'),
 };
 ---
 
