--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -48,12 +48,12 @@ const sortedEducation: CollectionEntry<typeof collectionName>[] = sortEducationB
           {edu.data.description && edu.data.description.length > 0 && (
              <ul class="relative space-y-2 text-sm text-foreground/70">
               {edu.data.description.map((item: string) => (
-                <div class="flex items-baseline leading-6 gap-2">
+                <li class="flex items-baseline leading-6 gap-2">
                   <span class="size-2 border-2 border-primary rounded-full flex-shrink-0" />
-                  <li>
+                  <p>
                     {item}
-                  </li>
-                </div>
+                  </p>
+                </li>
               ))}
             </ul>
           )}
