--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,10 @@
 import Section from "@/layouts/Section.astro";
 import TechBadges from "./TechBadges";
 import { Image } from "astro:assets";
-import portrait from "../assets/portrait.png";
+import portrait from "../assets/portrait-optimized.webp";
+import { FaLinkedinIn } from "react-icons/fa";
+import { IoMailOutline } from "react-icons/io5";
+
 
 const { t } = Astro.props;
 
@@ -16,10 +19,16 @@ const text = {
 <Section id={t('nav.home')}>
   <div class="p-8 flex flex-col md:flex-row items-center gap-12 mt-20">
     <div class="bg-conic/[from_var(--border-angle)] from-transparent from-40% via-primary via-60% to-transparent to-100% p-[2px] rounded-full animate-rotate-border">
-      <div class="bg-background size-86 rounded-full overflow-hidden">
+      <div class="size-72 sm:size-86 bg-background rounded-full overflow-hidden">
         <Image 
           src={portrait}
           alt={t('hero.img.alt')}
+          priority
+          width="344"
+          height="344"
+          format="webp"
+          quality={80}
+          class="w-full h-full object-cover"
         />
       </div>
     </div>
@@ -27,9 +36,20 @@ const text = {
       <h1 class="text-4xl lg:text-6xl font-bold whitespace-nowrap bg-clip-text text-transparent bg-gradient-to-r from-primary/80 to-primary to dark:from-primary dark:to-primary/60">{text.title}</h1>
       <p class="text-2xl lg:h-12 lg:text-4xl font-medium bg-clip-text text-transparent bg-gradient-to-r from-foreground/80 to-foreground dark:from-foreground dark:to-foreground/60">{text.subtitle}</p>
       <p class="text-muted-foreground mt-2">{text.description}</p>
+      <div class="flex items-center gap-2 mt-4 flex-wrap">
+        <a href="https://www.linkedin.com/in/alberto-galeano-diaz/" target="_blank" rel="noopener noreferrer" class="border px-3 py-2 rounded-full border-primary/50 text-primary bg-primary/5 hover:bg-primary/10 dark:bg-primary/10 hover:cursor-pointer hover:dark:bg-primary/20 hover:border-primary transition-colors [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 flex gap-2">
+          <FaLinkedinIn />
+          <span class="sr-only">LinkedIn</span>
+        </a>
+        <a href="mailto:galeano.diaz.alberto@gmail.com" target="_blank" rel="noopener noreferrer" class="border px-3 py-2 rounded-full border-muted-foreground/50 text-muted-foreground bg-muted-foreground/5 hover:bg-muted-foreground/10 dark:bg-muted-foreground/10 hover:cursor-pointer hover:dark:bg-muted-foreground/20 hover:border-muted-foreground transition-colors [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 flex gap-2">
+          <IoMailOutline />
+          <span class="sr-only">Mail</span>
+        </a>
+        
+      </div>
     </div>
   </div>
   <div class="w-full px-4 md:px-8">
-    <TechBadges client:load/>
+    <TechBadges client:idle/>
   </div>
 </Section>
