--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,9 +1,9 @@
 ---
 import Experience from '@/components/Experience.astro';
-import Header from '../../components/Header.astro';
-import Hero from '../../components/Hero.astro';
-import { getLangFromUrl, useTranslations } from '../../i18n/utils';
-import Layout from '../../layouts/Layout.astro';
+import Header from '@/components/Header.astro';
+import Hero from '@/components/Hero.astro';
+import { getLangFromUrl, useTranslations } from '@/i18n/utils';
+import Layout from '@/layouts/Layout.astro';
 import Projects from '@/components/Projects.astro';
 import Education from '@/components/Education.astro';
 import Contact from '@/components/Contact.astro';
